force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/ACCESS_INSTALLATION_CITY__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_INSTALLATION_CITY__c</fullName>
    <label>ACCESS_INSTALLATION_CITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>