force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/AVG_MONTHLY_DATA_CONSUMPTION_MB__c.field-meta.xml
<CustomField>
    <fullName>AVG_MONTHLY_DATA_CONSUMPTION_MB__c</fullName>
    <label>AVG_MONTHLY_DATA_CONSUMPTION_MB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>