force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/BAN_OWNER_CONTROL_NUA__c.field-meta.xml
<CustomField>
    <fullName>BAN_OWNER_CONTROL_NUA__c</fullName>
    <label>BAN_OWNER_CONTROL_NUA</label>
    <length>5</length>
    <type>Text</type>
</CustomField>