force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/Billing_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Id__c</fullName>
    <label>Billing Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>