force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/BILLING_NAME__c.field-meta.xml
<CustomField>
    <fullName>BILLING_NAME__c</fullName>
    <label>BILLING_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>