force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/BROADBAND_NO__c.field-meta.xml
<CustomField>
    <fullName>BROADBAND_NO__c</fullName>
    <label>BROADBAND_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>