force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/CALLS_FROM_DK_TO_EUNB_MIN__c.field-meta.xml
<CustomField>
    <fullName>CALLS_FROM_DK_TO_EUNB_MIN__c</fullName>
    <label>CALLS_FROM_DK_TO_EUNB_MIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>