force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/COMMIT_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>COMMIT_END_DATE__c</fullName>
    <label>COMMIT_END_DATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>