force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>