force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>IF(  NOT(ISBLANK(MOBILE_NO__c))   ,&quot;Mobile&quot;, IF( NOT(ISBLANK(FIX_NO__c)) ,&quot;Fastnet&quot;, &quot;Data&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>