force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/CVR_NO__c.field-meta.xml
<CustomField>
    <fullName>CVR_NO__c</fullName>
    <label>CVR_NO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>