force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT__c</fullName>
    <label>DISCOUNT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>