force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/EXISTING_SIM__c.field-meta.xml
<CustomField>
    <fullName>EXISTING_SIM__c</fullName>
    <label>EXISTING_SIM</label>
    <length>250</length>
    <type>Text</type>
</CustomField>