force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/EXTRA_SIM_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>EXTRA_SIM_NUMBER__c</fullName>
    <label>EXTRA_SIM_NUMBER</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>