force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/FIX_NO__c.field-meta.xml
<CustomField>
    <fullName>FIX_NO__c</fullName>
    <label>FIX_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>