force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/INSTANCE_KEY__c.field-meta.xml
<CustomField>
    <fullName>INSTANCE_KEY__c</fullName>
    <externalId>true</externalId>
    <label>INSTANCE_KEY</label>
    <length>250</length>
    <type>Text</type>
</CustomField>