force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/INTAKE_DATE__c.field-meta.xml
<CustomField>
    <fullName>INTAKE_DATE__c</fullName>
    <label>INTAKE_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>