force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/INVOICE_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_EMAIL__c</fullName>
    <label>INVOICE_EMAIL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>