force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/LOOKUP_MOBILE_USER__c.field-meta.xml
<CustomField>
    <fullName>LOOKUP_MOBILE_USER__c</fullName>
    <label>LOOKUP_MOBILE_USER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>