force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/MAX_MONTHLY_DATA_CONSUMPTION_MB__c.field-meta.xml
<CustomField>
    <fullName>MAX_MONTHLY_DATA_CONSUMPTION_MB__c</fullName>
    <label>MAX_MONTHLY_DATA_CONSUMPTION_MB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>