force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/MOBILE_NO__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_NO__c</fullName>
    <label>MOBILE_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>