force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/OWNER_CONTROL_TSRR__c.field-meta.xml
<CustomField>
    <fullName>OWNER_CONTROL_TSRR__c</fullName>
    <label>OWNER_CONTROL_TSRR</label>
    <length>5</length>
    <type>Text</type>
</CustomField>