force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/Process_Error__c.field-meta.xml
<CustomField>
    <fullName>Process_Error__c</fullName>
    <label>Process Error</label>
    <type>TextArea</type>
</CustomField>