force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/RECURRING_PRICE_AFTER_DISCOUNT_INCL_VAT__c.field-meta.xml
<CustomField>
    <fullName>RECURRING_PRICE_AFTER_DISCOUNT_INCL_VAT__c</fullName>
    <label>RECURRING_PRICE_AFTER_DISCOUNT_INCL_VAT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>