force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SERVICE_CODE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_CODE__c</fullName>
    <label>SERVICE_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>