force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SF_ACCOUNT_KEY__c.field-meta.xml
<CustomField>
    <fullName>SF_ACCOUNT_KEY__c</fullName>
    <label>SF_ACCOUNT_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>