force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SUBSCRIBER_CURRENT_KEY__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_CURRENT_KEY__c</fullName>
    <label>SUBSCRIBER_CURRENT_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>