force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SUBSCRIBER_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_EMAIL__c</fullName>
    <label>SUBSCRIBER_EMAIL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>