force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SUBSCRIBER_ID__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_ID__c</fullName>
    <label>SUBSCRIBER_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>