force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SUBSCRIBER_NO__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_NO__c</fullName>
    <label>SUBSCRIBER_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>