force-app/main/default/objects/Fokus_Subscription_Delta__c/fields/SUBSCRIBER_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_START_DATE__c</fullName>
    <label>SUBSCRIBER_START_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>